--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nodemongoreact",
   "version": "1.0.0",
   "description": "demo node + mongo + react app",
-  "main": "index.js",
+  "main": "App.js",
   "scripts": {
     "start": "nodemon --exec babel-node server.js --ignore public/",
     "dev": "webpack -wd",
@@ -30,10 +30,30 @@
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "classnames": "^2.2.5",
+    "css-loader": "^0.28.4",
     "eslint": "^4.2.0",
     "eslint-plugin-react": "^7.1.0",
+    "history": "^4.6.3",
+    "jquery": "^3.2.1",
+    "material-ui": "^0.18.6",
+    "node-sass": "^4.5.3",
     "nodemon": "^1.11.0",
+    "ramda": "^0.24.1",
+    "react-redux": "^5.0.5",
+    "react-router-dom": "^4.1.2",
+    "react-router-redux": "^4.0.8",
+    "react-s-alert": "^1.3.0",
+    "react-skylight": "^0.4.2",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
+    "rxjs": "^5.4.2",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
+    "universal-cookie": "^2.0.8",
     "webpack": "^3.2.0"
   }
 }
