Removed all HD SSO login code and added dependencies for token-based authentication

--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
   },
   "homepage": "https://github.com/mmayoras/NodeMongoReact#readme",
   "dependencies": {
+    "body-parser": "^1.17.2",
     "express": "^4.15.3",
+    "jsonwebtoken": "^7.4.1",
     "mongodb": "^2.2.30",
+    "mongoose": "^4.11.5",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
   },
@@ -53,7 +56,6 @@
     "rxjs": "^5.4.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
-    "universal-cookie": "^2.0.8",
     "webpack": "^3.2.0"
   }
 }
