--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "file-loader": "^0.11.2",
+    "image-webpack-loader": "^3.3.1",
     "jsonwebtoken": "^7.4.1",
     "mongodb": "^2.2.30",
     "mongoose": "^4.11.5",
