--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,4 @@ CSCRewriteNode.iml
 /.idea
 
 # Webpack build files
-/public/crcNew02APR2014-8703d78da48af46d47cc3b8fb8678fc7.gif
-/public/projectloanNew02APR2014-03c0e3a1c2b4bd2305b667ad705bd1c4.gif
-/public/proxNew02APR2014-9265141f48ef4d0224227cc181d9e380.gif
-/public/rpl-20639cf49e4006f591ce5b67963f8f30.gif
+/public/*.gif
